<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQtdDados">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1dado" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2dado" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rb3dado" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvQtdDados"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tvQtdDados"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipoDeDado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tvTipoDeDado"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="187dp"
        android:layout_height="339dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipoDeDado">

        <RadioButton
            android:id="@+id/rbD4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD4" />

        <RadioButton
            android:id="@+id/rbD6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD6" />

        <RadioButton
            android:id="@+id/rbD8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD8" />

        <RadioButton
            android:id="@+id/rbD10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD10" />

        <RadioButton
            android:id="@+id/rbD12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD12" />

        <RadioButton
            android:id="@+id/rbD20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD20" />

        <RadioButton
            android:id="@+id/rbD100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbD100" />
    </RadioGroup>

    <Button
        android:id="@+id/btnJogarDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btnLancarDados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <TextView
        android:id="@+id/tvResDado1"
        android:layout_width="406dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJogarDados" />

    <TextView
        android:id="@+id/tvResDado2"
        android:layout_width="409dp"
        android:layout_height="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResDado1" />

    <TextView
        android:id="@+id/tvResDado3"
        android:layout_width="409dp"
        android:layout_height="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResDado2" />

</androidx.constraintlayout.widget.ConstraintLayout>